suppressed some local unused warnings